--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,27 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.field+.field {
+  margin-left: 20px;
+}
+
+.value {
+  font-size: 25px;
+  color: purple;
+}
+
+.label {
+  color: blueviolet;
+}
